@@ -120,6 +120,11 @@ when a database is exported to XML as there is no mechanism to re-check them dur
 import. Exporting to XML and then importing to a new database can be used to remove
 these unknown fields.</td>
 </tr>
+<td align="center" width="100">n/a</td>
+<td>Date time fields, when exported to XML, now are in the W3C dateTime standard format
+instead of PasswordSafe's.  This release can import XML files with date time fields in
+either of these forms. The next release will only be able to process the W3C standard.</td>
+</tr>
 </tbody>
 </table>
 <h4><a name="V3.25.1BugsFixed"></a>Bugs fixed in V3.25.1</h4>
