@@ -82,9 +82,14 @@ const XMLFileValidation::st_file_elements XMLFileValidation::m_file_elements[XLE
   {_T("atime"), {0, XLE_ATIME}},
   {_T("ltime"), {0, XLE_LTIME}},
   {_T("xtime"), {0, XLE_XTIME}},
-  {_T("xtime_interval"), {0, XLE_XTIME_INTERVAL}},
   {_T("pmtime"), {0, XLE_PMTIME}},
   {_T("rmtime"), {0, XLE_RMTIME}},
+  {_T("ctimex"), {0, XLE_CTIMEX}},
+  {_T("atimex"), {0, XLE_ATIMEX}},
+  {_T("xtimex"), {0, XLE_XTIMEX}},
+  {_T("pmtimex"), {0, XLE_PMTIMEX}},
+  {_T("rmtimex"), {0, XLE_RMTIMEX}},
+  {_T("xtime_interval"), {0, XLE_XTIME_INTERVAL}},
   {_T("pwhistory"), {0, XLE_PWHISTORY}},
   {_T("PasswordPolicy"), {0, XLE_ENTRY_PASSWORDPOLICY}},
   {_T("symbols"), {0, XLE_SYMBOLS}},
